2009-07-09  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::SharkBuilder):  Pass the LLVMContext returned
	from getGlobalContext() to the new IRBuilder constructor
	when llvm version are 2.6 or later to handle LLVM API change.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp:
	New methods allocateGlobal, setPoisonMemory, dependent on the
	llvm version.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp:
	Likewise.
 
2009-07-08  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::pointer_constant): Pass the LLVMContext returned
	from getGlobalContext() to the new GlobalVariable constructor
	when llvm version are 2.6 or later to handle LLVM API change.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::CreateDump): Likewise.

2009-07-07  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	Include llvm/LLVMContext.h used by getGlobalContext()
	when llvm version are 2.6 or later.
	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Pass the LLVMContext returned 
	from getGlobalContext() to the new Module constructor
	when llvm version are 2.6 or later to handle LLVM API change.

2009-07-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp
	(SharkEntry::print_statistics): Removed.
	* ports/hotspot/src/share/vm/shark/sharkEntry.cpp: Removed.

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::compile_method): Save location of native code
	across the call to ciEnv::register_method (which frees the buffer
	blob it's in), and inline what was SharkEntry::print_statistics.

	* ports/hotspot/src/share/vm/includeDB_shark: Updated.

2009-06-26  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Moved LLVM multithreading