@@ -1,3 +1,11 @@
+2009-07-14  Xerxes Rånby  <xerxes@zafena.se>
+
+	* ports/hotspot/src/share/vm/shark/llvmValue.hpp
+	(jfloat_constant): Handle LLVM 2.6 svn r75546 API change.
+	llvm::ConstantFP::get have been moved to
+	llvm::LLVMContext::getConstantFP.
+	(jdouble_constant): Likewise.
+
 2009-07-09  Xerxes Rånby  <xerxes@zafena.se>
 
 	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
